<resources>
    <string name="app_name">Agora</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_wrong_password">Username is taken, and this is the wrong password.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_tabmain">Agora</string>
    <string name="action_search">Search</string>
    <string name="agora_prompt_question">Enter Question</string>
    <string name="agora_prompt_tag">Enter Tags</string>
    <string name="agora_button_newquestion">Submit New Question</string>
    <string name="agora_tab_title">Agora</string>
    <string name="account_tab_title">Me</string>
    <string name="sort_tab_title">Sort</string>
    <string name="sort_tab_categories">Popular Tags</string>
    <string name="failed_response_upload">Sorry, I failed to deliver.</string>
    <string name="failed_agora_getAll">The internet broke, Retry?</string>
    <string name="retry_agora_getAll">Im going to go to the local internet cafe in search of the server. Brb...</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="newresponse_prompt">add new response</string>
    <string name="newresponse_prompt_hint">New Response</string>
    <string name="newresponse_submit">submit</string>
    <string name="newquestion_error_noquestion">The question field needs to have something in it.</string>
    <string name="newquestion_error_notags">The tags field needs to have something it it.</string>
    <string name="newquestion_error_noconnection">The Bind Watchmaker is nowhere to be found. You must have not be connected to the internet.</string>
    <string name="newquestion_success">I just asked the server, The Blind Watchmaker, your question. If The Blind Watchmaker likes it, then it will be uploaded.</string>
    <string name="newquestion_error_not_logged_in">Sorry, you must be logged in to post a question.</string>
    <string name="default_response_data">[\'text\': \'There are no responses.\']</string>
    <string name="account_title">Account</string>
    <string name="account_anonymous_name">John Doe</string>
    <string name="account_login">Login</string>
    <string name="account_stats_myQuestions">Questions\nasked</string>
    <string name="account_stats_myResponses">Responses\ngiven</string>
    <string name="account_stats_myVotes">Votes\nsubmitted</string>
    <string name="account_stats_QuestionVotes">Votes\non my questions</string>
    <string name="account_stats_ResponseVotes">Votes\non my responses</string>
    <string name="account_stats_totalResponses">Responses\nto my questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master">Master</string>
    <string name="blank_question">Where is the question?</string>
    <string name="blank_response">This is mostly response.</string>
    <string name="prompt_username">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_username">John Doe</string>
    <string name="no_modules">No Modules</string>
    <string name="no_responses">No Responses</string>
    <string name="activity_login_title">Sign In</string>
    <string name="activity_register_title">Register</string>
    <string name="error_registration_failed">Failed to register. Stupid username, and yo mama is fat.</string>
    <string name="activity_register_bar_title">Agora Registration</string>
    <string name="activity_login_bar_title">Agora Login</string>
    <string name="login_incorrect">Login failed, it was incorrect. I know how it feels to forget a login, that is why I keep a flash drive on me at all  time with all of my logins on them. I use a random generator to make a key and I only keep it on that flash drive. What would happen if I lose that flash drive? Oh.. never thought of that.</string>
</resources>
