<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.startandselect.agora.NewQuestion"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Drawing Board"
            android:textSize="@dimen/h3"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/padding_extra"/>
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_default">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/padding_default">
                    <EditText
                        android:id="@+id/newquestion_questioninput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agora_prompt_question"
                        android:gravity="center_horizontal"/>
                </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_default">
                <EditText
                    android:id="@+id/newquestion_taginput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="@string/agora_prompt_tag"
                    android:layout_marginTop="@dimen/padding_default"/>
            </LinearLayout>

            <TextView
                android:id="@+id/newquestion_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/newquestion_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:src="@drawable/ic_add_white_24px"
            android:id="@+id/newquestion_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/agora_button_newquestion"/>
    </RelativeLayout>


</LinearLayout>
