<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.startandselect.agora.Account_tab">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/account_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/account_loggedin_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/account_profile_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_default"
                    android:padding="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/account_profile_icon"
                            android:layout_margin="@dimen/padding_default"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/account_icon_size"
                            android:src="@drawable/ic_account_circle_black_24px"
                            android:alpha=".5"/>
                        <TextView
                            android:id="@+id/account_profile_name"
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h1"
                            android:text="@string/account_anonymous_name"/>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_myQuestions"/>
                        <TextView
                            android:id="@+id/account_stats_myQuestions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="@dimen/padding_default"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_myResponses"/>
                        <TextView
                            android:id="@+id/account_stats_myResponses"
                            android:paddingRight="@dimen/padding_default"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_totalResponses"/>
                        <TextView
                            android:id="@+id/account_stats_totalResponses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/padding_default"
                            android:gravity="right"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_myVotes"/>
                        <TextView
                            android:id="@+id/account_stats_myVotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/padding_default"
                            android:gravity="right"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_QuestionVotes"/>
                        <TextView
                            android:id="@+id/account_stats_QuestionVotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/padding_default"
                            android:gravity="right"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h3"
                            android:text="@string/account_stats_ResponseVotes"/>
                        <TextView
                            android:id="@+id/account_stats_ResponseVotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/padding_default"
                            android:gravity="right"
                            android:text="0"
                            android:textSize="@dimen/h2"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:visibility="gone"
                    android:id="@+id/account_sign_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_default">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Sign out"
                            android:alpha=".9"
                            android:padding="13dp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <!-- login buttons -->
            <android.support.v7.widget.CardView
                android:id="@+id/account_sign_in_agora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Sign in"
                        android:alpha=".9"
                        android:padding="@dimen/padding_default"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/account_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_default">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Register"
                        android:alpha=".9"
                        android:padding="@dimen/padding_default"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
